--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -5,8 +5,6 @@
 
 .columns img {
     width: 100%;
-    height: 250px;
-    border-radius: 50%;
 }
 
 @media (min-width: 900px) {
@@ -24,4 +22,10 @@
     .columns > div > div:first-of-type {
         margin-left: unset;
     }
+}
+
+/* Columns h4 styling with Lato font */
+.columns .h4 {
+    font-family: "Lato", Helvetica, Arial, sans-serif;
+    font-weight: 400;
 }
