--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -91,6 +91,7 @@ main .carousel div.carousel-text .button {
 /* Product Card Header Styling */
 main .carousel .slide {
   position: relative;
+  border: 1px solid #3ad57a !important;
 }
 
 main .carousel .slide::before {
