--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -23,6 +23,10 @@ main .carousel picture {
   display: none; /* Hide background images for card design */
 }
 
+main .carousel .carousel-image {
+  background: #004b4b;
+}
+
 main .carousel img {
   display: none; /* Hide background images for card design */
 }
