--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -66,8 +66,8 @@ main .carousel > div {
 
 /* For slides with images, adjust the structure */
 main .carousel > div .carousel-image {
-  flex: 0 0 auto;
-  min-height: 250px;
+  flex: 0 0 33.333%;
+  height: 33.333%;
   position: relative;
   overflow: hidden;
 }
