--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -29,7 +29,6 @@ main .carousel picture {
 main .carousel .carousel-image {
   background: #004b4b;
   position: relative;
-  min-height: 300px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -50,7 +49,7 @@ main .carousel .carousel-image a {
 }
 
 main .carousel img {
-  object-fit: cover;
+  object-fit: contain;
   width: 100%;
   height: 100%;
   object-position: center;
@@ -79,7 +78,7 @@ main .carousel > div {
 /* For slides with images, adjust the structure */
 main .carousel > div .carousel-image {
   flex: 0 0 33.333%;
-  height: 33.333%;
+  min-height: 0;
   position: relative;
   overflow: hidden;
 }
@@ -91,6 +90,7 @@ main .carousel > div .carousel-text {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  min-height: 0;
 }
 
 /* Active slides styling */
