--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -33,6 +33,7 @@ main .carousel .carousel-image {
   align-items: center;
   justify-content: center;
   overflow: hidden;
+  padding: 20px;
 }
 
 /* Handle image links in carousel */
@@ -54,6 +55,8 @@ main .carousel img {
   height: 100%;
   object-position: center;
   display: block;
+  max-width: 100%;
+  max-height: 100%;
 }
   
 main .carousel > div {
