--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -12,6 +12,19 @@ footer .footer {
   margin: auto;
 }
 
+/* Full width footer image */
+footer .footer picture {
+  width: 100vw;
+  margin-left: calc(-50vw + 50%);
+  display: block;
+}
+
+footer .footer picture img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
 .footer > div {
   display: grid;
   grid-template-columns: auto 50% auto;
