--- a/styles/styles.css
+++ b/styles/styles.css
@@ -279,6 +279,8 @@ img {
   width: auto !important;
   height: auto !important;
   object-fit: none !important;
+  display: block !important;
+  margin: 0 auto !important;
 }
 
 @media (min-width: 600px) {
