--- a/styles/styles.css
+++ b/styles/styles.css
@@ -120,7 +120,11 @@ body.article h2::after {
 
 h2 { font-size: var(--heading-font-size-xl) }
 h3 { font-size: var(--heading-font-size-l) }
-h4 { font-size: var(--heading-font-size-m) }
+h4 { 
+  font-family: 'Lato', sans-serif;
+  font-weight: 900;
+  font-size: var(--heading-font-size-m);
+}
 h5 { font-size: var(--heading-font-size-s) }
 h6 { font-size: var(--heading-font-size-xs) }
 
@@ -130,6 +134,8 @@ p, dl, ol, ul, pre, blockquote {
 }
 
 body p {
+  font-family: 'Lato', sans-serif;
+  font-weight: 900;
   margin: 0 0 13.5px;
   font-size: 18px;
   line-height: 2.5;
