--- a/styles/styles.css
+++ b/styles/styles.css
@@ -296,12 +296,13 @@ img {
 }
 
 @media (min-width: 600px) {
+  
+  main .section.teaser-container {
+    padding: 0;
+  }
+  
   main .section {
     padding: 64px 32px;
-  }
-
-  .teaser-container {
-    padding: 0;
   }
 }
 
