--- a/blocks/content-fragment/content-fragment.css
+++ b/blocks/content-fragment/content-fragment.css
@@ -2,17 +2,23 @@
   background-color: white;
   white-space: pre;
   margin: 25px;
+  border-radius: 12px;
+  overflow: hidden;
 }
 
 .content-fragment-wrapper{
    display: flex;
    height: 100%;
    position: relative;
-   font-size: 16px
+   font-size: 16px;
+   border-radius: 12px;
+   overflow: hidden;
 } 
 
 section:nth-child(1) {
   flex: 1;
+  border-radius: 12px;
+  overflow: hidden;
 }
 
 section:nth-child(2) {
@@ -22,7 +28,8 @@ section:nth-child(2) {
   left: 50px;
   right: 50px;
   bottom: 40px;
-  background-color: rgb(0 0 0 / 40%)
+  background-color: rgb(0 0 0 / 40%);
+  border-radius: 8px;
 }
 
 section:nth-child(3) {
@@ -34,6 +41,7 @@ section:nth-child(3) {
   bottom: 10px;
   color: white;
   font-size: 16px;
+  border-radius: 8px;
 }
 
 section:nth-child(4) {
@@ -44,6 +52,7 @@ section:nth-child(4) {
   right: 50px;
   bottom: 10px;
   color: yellow;
+  border-radius: 8px;
 }
 
 section:nth-child(5) {
@@ -54,6 +63,7 @@ section:nth-child(5) {
   right: 50px;
   bottom: 10px;
   color: yellow;
+  border-radius: 8px;
 }
 
 section:nth-child(6) {
@@ -64,6 +74,7 @@ section:nth-child(6) {
   right: 50px;
   bottom: 10px;
   color: yellow;
+  border-radius: 8px;
 }
 
 section:nth-child(7) {
@@ -74,6 +85,7 @@ section:nth-child(7) {
   right: 50px;
   bottom: 10px;
   color: yellow;
+  border-radius: 8px;
 }
 
 section:nth-child(8) {
@@ -84,6 +96,7 @@ section:nth-child(8) {
   right: 50px;
   bottom: 10px;
   color: white;
+  border-radius: 8px;
 }
 
 section:nth-child(8) p {
@@ -101,11 +114,13 @@ section:nth-child(8) p {
   flex: 1;
   background-color: #ebebeb;
   padding: 3.5em 2em 2em;
+  border-radius: 12px;
 }
 
 img {
   width: 1200px;
   height: 160px;
+  border-radius: 12px;
 }
 
 .content-fragment-wrapper h3 {
