--- a/blocks/content-fragment/content-fragment.css
+++ b/blocks/content-fragment/content-fragment.css
@@ -24,6 +24,7 @@ section:nth-child(1) {
   flex: 1;
   border-radius: 12px;
   overflow: hidden;
+  background-color: rgb(0 0 0 / 40%);
 }
 
 section:nth-child(2) {
